# ai-powered-search

./: .gitignore  README.md  dev.py  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: index.py
search/: db.py  search.py
src/app/: layout.tsx  page.tsx
src/components/product/: Product.tsx
src/components/search/: AvailableBrands.tsx  ProductSearch.tsx  QueryUsed.tsx  index.tsx
